2005-03-03  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp: No SD change during calls.

2005-03-01  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Moved gnomemeeting.desktop.in to
	gnomemeeting.desktop.in.in and added it to configure.in to be able
	to substitute variables in it.

2005-03-01  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in: Fixed ports.

2005-03-01  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp, src/endpoint.h: Make use of the Mask to remove
	media formats that we do not want to use.

2005-02-28  Damien Sandras  <dsandras@gnome.org>

	* src/stunclient.cpp: Fixed messages thanks to a suggestion from
	Daniel Huhardeaux.

2005-02-25  Damien Sandras  <dsandras@gnome.org>

	* src/accounts.cpp: Removed instance mutex.

	* src/endpoint.cpp: Moved STUN code before the endpoint initialization
	to make sure STUN is active when registering.

	* src/gnomemeeting.cpp, src/gnomemeeting.h, src/main_window.cpp: Show
	the GUI in the main (), not in the method that builds it.

2005-02-23  Damien Sandras  <dsandras@gnome.org>

	* src/accounts.cpp: Removed GLIB 2.6 function usage.

2005-02-22  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Changed version to 1.3.0.

2005-02-22  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in: Added keys for H.323 and SIP DTMF modes.
	
	* src/config.cpp, src/endpoint.cpp,  src/endpoint.h, 
	src/h323endpoint.cpp, src/h323endpoint.h, src/pref_window.cpp,
	src/sipendpoint.cpp, src/sipendpoint.h: Fixed codecs selection
	and reordering. Added DTMF mode selection to the H.323 and SIP pages.
	Removed now unuseful "Advanced Settings" page.

2005-02-21  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Added back IXJ check.

2005-02-21  Damien Sandras  <dsandras@gnome.org>

	* src/prefs_window.cpp: Correctly remove deleted accounts
	from the GUI.

2005-02-21  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.schemas.in.in: Removed Gatekeeper key.
