@@ -1,5 +1,10 @@
 2005-03-03  Damien Sandras  <dsandras@gnome.org>
 
+	* src/prefs_window.cpp: Make sure to select the row when 
+	the account is enabled/disabled.
+
+2005-03-03  Damien Sandras  <dsandras@gnome.org>
+
 	* src/config.cpp: No SD change during calls.
 
 2005-03-01  Damien Sandras  <dsandras@gnome.org>
